overlay - z-index changed to 1000, position fixed, close button styling

--- a/assets/stylesheets/soysauce/_overlay.scss
+++ b/assets/stylesheets/soysauce/_overlay.scss
@@ -1,15 +1,31 @@
 [data-ss-utility="overlay"] {
-		@include transition(opacity 0.3s ease-in-out);
-		display: none;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background: black;
-		opacity: 0;
-		z-index: 1;
-	&[data-ss-state="active"] {
-		opacity: 0.7;
-	}
+  @include transition(opacity 0.3s ease-in-out);
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0;
+  z-index: 1000;
+  &[data-ss-state="active"] {
+    opacity: 0.7;
+    [data-ss-component] {
+      display: block;
+    }
+  }
+  [data-ss-component] {
+    display: none;
+  }
+  [data-ss-component="close"] {
+    @include border-radius(5px);
+    position: absolute;
+    color: white;
+    padding: 5px;
+    border: 1px solid white;
+    top: 5px;
+    right: 5px;
+    z-index: 1100;
+  }
 }
